--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <strong class="navbar-brand">My Tasks</strong>
+      </div>
+    </div>
+  </nav>
+  <tasks></tasks>
 </body>
 </html>
